syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "EsamiOnline.Exam";

package exam;

service Exams {
  rpc SaveExam (ExamDto) returns (google.protobuf.Empty);
  rpc GetExamByDate (ExamDateRequest) returns (stream ExamDto);
  rpc BookExam (BookExamRequest) returns (google.protobuf.BoolValue);
}

message ExamDto {
  google.protobuf.StringValue name = 1;
  google.protobuf.Timestamp exam_datetime = 2;
  google.protobuf.DoubleValue duration = 3;
  google.protobuf.Int32Value booked_students = 4;
}

message ExamDateRequest{
  google.protobuf.Timestamp start_date = 1;
  google.protobuf.Timestamp end_date = 2;
}

message BookExamRequest{
  string exam_name = 1;
  string gov_id = 2;
  string student_id = 3;
}

